Changed sidebar width to fix wrapping text in Safari

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -198,7 +198,7 @@ label {
 }
 
 #content {
-  width: 48rem;
+  width: 47.5rem;
   float: left;
 
   p:last-child, ul:last-child, blockquote:last-child {
@@ -207,7 +207,7 @@ label {
 }
 
 #sidebar {
-  width: 18rem;
+  width: 18.5rem;
   float: right;
 
   .sidebar_section {
